Refs #141511 - Fix filters btn right align.

--- a/src/SearchBlock/less/styles.less
+++ b/src/SearchBlock/less/styles.less
@@ -276,6 +276,7 @@ div#page-document {
 
       button.show-filters {
         margin-top: 0.3em;
+        margin-right: 0px;
         background: @sf-light-gray !important;
         border-radius: 2px;
         color: @sf-azure !important;
